Changelog
=========

0.5 - unreleased
----------------

- Remove home folder references from `author.cpt`. Refs #123.
  [hannosch]

- Updated livesearch.js to conform with JSLint code checker.
  [denys]

- Fixed background color for the calendar in Chrome. Closes #122.
  [denys]


0.4 - 2010-11-15
----------------

- Improved print stylesheet by adding more styles from html5boilerplate.com.
  [denys]

- ``chrome=1`` property added to `X-UA-Compatible` ``<meta>`` to support
  `Google Chrome Frame`.
  [denys]

- Added default `no-js` class on ``<html>`` element to provide proper fallback
  for `modernizr.js` library.
  [denys]

- Print stylesheet. References https://jira.jarn.com/browse/INTRANETT-51.
  [denys]

- Re-introduced workflow-state colors with `member.css`. Closes
  https://jira.jarn.com/browse/INTRANETT-86.
  [denys]

- Copied over styles for calendar that were missing for PloneFormGen calendars.
  Closes https://jira.jarn.com/browse/INTRANETT-106
  [denys]

- Removed hardcoded height for the thumbnails in employee-listing.
  [denys]

0.3 - 2010-10-25
----------------

- Split eployee-listing view into 2 columns to make the view more compact.
  Reduced the noise in departments listing and title.
  [denys]

- Employee listing styles for thumbnails view.
  [denys]

- Linked department info on the ``profile`` view to ``employee-listing`` of
  this department.
  [denys]

- Removed contact form from author.pt.
  [denys]

- Added employee-listing view.
  [ggozad]

- Added a ``robots.txt`` to disallow any robot from indexing the site.
  This refs #78.
  [hannosch]

- Prevent the front page view from being accessible by anonymous users.
  Refs #68.
  [hannosch]

- Hooked translations from ``intranett`` domain to profile view.
  [denys]

- Profile page (author.cpt). References #67.
  [denys]

- Fixed edge case of the frontpage when no portlets registered in the
  frontpage columns. Fixes #97.
  [denys, hannosch]
