@@ -94,7 +94,7 @@
       layer=".interfaces.IThemeSpecific"
       template="templates/manage-frontpage.pt"
       />
-      
+
   <!-- Employee listing -->
   <browser:page
       for="Products.CMFPlone.interfaces.IPloneSiteRoot"
@@ -103,5 +103,14 @@
       template="templates/employeelisting_view.pt"
       permission="zope2.View"
       />
-      
+
+  <!-- User / author page -->
+  <browser:page
+      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+      name="user"
+      class=".user.UserView"
+      template="templates/user.pt"
+      permission="zope2.View"
+      />
+
 </configure>
