@@ -18,7 +18,7 @@
               i18n:translate="label_by_author">
           by
           <a href="#"
-             tal:attributes="href string:${context/@@plone_portal_state/navigation_root_url}/author/${creator_id}"
+             tal:attributes="href string:${context/@@plone_portal_state/navigation_root_url}/@@user?name=${creator_id}"
              tal:content="view/authorname"
              tal:omit-tag="python:view.author() is None"
              i18n:name="author">
