@@ -1,0 +1,7 @@
+from zope.publisher.browser import BrowserView
+
+
+class UserView(BrowserView):
+
+    def username(self):
+        return self.request.form.get('name', '')
