@@ -1,5 +1,0 @@
-[default]
-title=Author information
-
-[security]
-View=0:Anonymous
